--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,7 @@
 * {
   font-family: "Poppins", sans-serif;
 }
+
+.mtBtn {
+  @apply bg-linear-to-r from-[#F57C00] to-[#FFB74D] text-primary rounded-lg font-bold transition-all duration-300 hover:opacity-90 hover:-translate-y-0.5 cursor-pointer;
+}
