--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,14 @@
   --color-secondary: #fde7b3;
   --color-success: #63a361;
   --color-warning: #f57c00;
-  --color-accent: #5b532c;
+  --color-accent: #2d2d2d;
   --color-info: #3b82f6;
 }
 * {
   font-family: "Poppins", sans-serif;
+}
+a.active {
+  color: #f57c00;
 }
 /* --color-secondary: #FDE7B3; 
 Accent (highlight / icon / badge / small attention)
